Adds auto updater process monitoring using God and rake tasks to pull shuttle tracking data feed

--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -7,5 +7,7 @@
  *
  *= require polymer/polymer
  *= require google-map
+ *= require core-header-panel/core-header-panel
+ *= require core-toolbar/core-toolbar
  *= require_tree .
 -->
