Adds objects for routes and stops. Adds functions for route index and create

--- a/static/partials/vehicles.html
+++ b/static/partials/vehicles.html
@@ -4,8 +4,8 @@
 
 <form ng-submit="addVehicle()">
   <label>Vehicle ID</label>
-  <input type="text" name="employees" ng-model="vehicleId">
+  <input type="text" ng-model="vehicleId">
   <label>Vehicle Name</label>
-  <input type="text" name="headoffice" ng-model="vehicleName">
+  <input type="text" ng-model="vehicleName">
   <input type="submit" value="Submit">  
 </form>
