Fix issue clearing markers

--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -80,17 +80,16 @@
 
       periodicUpdates: function() {
         // periodically check screen setup for changes
-        setInterval(this.checkForUpdates, 8000, this.$.fetchUpdates);
+        setInterval(this.checkForUpdates, 15000, this.$.fetchUpdates);
       },
 
       placeMarkers: function(event, response) {
-        // Clear previous markers from map
-        this.clearMarkers();
         var updates = response.response;
         if (updates) {
+          // Clear previous markers from map
+          this.clearMarkers();
           // Iterate through each vehicle update
           for (i = 0; i < updates.length; i++) {
-            console.log(updates[i]);
             // Create position from vehicle coordinates
             var pos = new google.maps.LatLng(updates[i]["lat"], updates[i]["lng"]);
             // Place shuttle marker on map
@@ -108,13 +107,13 @@
 
       clearMarkers: function() {
         for (i = 0; i < this.markers.length; i++) {
-          //this.markers[i].setMap(null);
-          //delete this.markers[i]
+          this.markers[i].setMap(null);
         }
+        this.markers = [];
       },
 
       drawRoutes: function(event, response) {
-        console.log(response.response);
+        // Draw polylines on map to represent tracking routes
       }
     });
   </script>
