--- a/static/components/tracking-routes.html
+++ b/static/components/tracking-routes.html
@@ -1,11 +1,62 @@
+<link rel="import" href="../../bower_components/iron-form/iron-form.html">
+<link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-toggle-button/paper-toggle-button.html">
+
 <dom-module id="tracking-routes">
   <template>
+    <iron-ajax
+      auto
+      id="updateRoutes"
+      url="/routes"
+      handle-as="json"
+      last-response="{{routes}}">
+    </iron-ajax>
+
     <h1> Routes </h1>
+    <template is="dom-if" if="{{routes}}">
+      <template is="dom-repeat" items="{{routes}}" as="route">
+        <b> Name: </b> <span>{{route.name}}</span>
+        <b> StartTime: </b> <span>{{route.startTime}}</span>
+        <b> EndTime: </b> <span>{{route.endTime}}</span>
+        <b> Enabled: </b> <span>{{route.Enabled}}</span>
+        <b> Color: </b> <span>{{route.color}}</span>
+        <b> Width: </b> <span>{{route.Width}}</span>
+        <br />
+      </template>
+    </template>
+
+    <h1> New Route </h1>
+    <form is="iron-form" id="routeForm" content-type="application/json" method="post" action="/routes/create">
+      <paper-input name="name" label="Route Name"></paper-input>
+      <paper-input name="startTime" label="Start Time"></paper-input>
+      <paper-input name="endTime" label="End Time"></paper-input>
+      <paper-input name="color" label="Color"></paper-input>
+      <paper-input name="width" label="Width"></paper-input>
+      <div> 
+        Route Enabled?
+        <paper-toggle-button checked="{{isEnabled}}"></paper-toggle-button> 
+        <input type="hidden" name="enabled" value="{{isEnabled}}">
+      </div>
+      <paper-button raisedButton onclick="submitRoute()">Submit</paper-button>
+    </form>
   </template>
 
   <script>
     Polymer({ 
-      
+      is: 'tracking-routes',
+      listeners: {
+        'iron-form-response': 'addRouteResponse'
+      },
+      addRouteResponse: function() {
+        this.$.updateRoutes.generateRequest();
+      }
     });
+
+    function submitRoute() {
+      var form = document.getElementById("routeForm");
+      form.submit();
+      form.reset();
+    }
   </script>
 </dom-module>
