--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -1,8 +1,28 @@
+<link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/bower_components/paper-fab/paper-fab.html">
+
 <dom-module id="shuttles-map"> 
   <style> 
     :host {
       width: 100%;
       height: 100%;
+    }
+    #logo {
+      position: absolute;
+      width: 100%;
+      top: 1px;
+      left: 1px;
+    }
+    #logo img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #menu paper-fab {
+      position: absolute;
+      background: red;
+      right: 5px;
+      top: 5px;
     }
     #mapCanvas {
       width: 100%;
@@ -10,8 +30,7 @@
     }
   </style>
 
-  <template> 
-    <div id="mapCanvas"></div>
+  <template>
     <iron-ajax
       id="fetchUpdates"
       url="/updates"
@@ -23,6 +42,15 @@
       url="/routes"
       handle-as="json" auto
       on-response="drawRoutes">
+    </iron-ajax>
+
+    <div id="mapCanvas"></div>
+    <div id="logo">
+      <img src="../images/logo.png" />
+    </div>
+    <div id="menu">>
+      <paper-fab on-click="toggleMenu" icon="menu"></paper-fab>
+    </div>
   </template>
 
   <script>
@@ -55,6 +83,10 @@
           type: Array,
           value: []
         }
+      },
+
+      toggleMenu: function() {
+
       },
 
       attached: function() {
