--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -1,5 +1,6 @@
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../bower_components/google-map/google-map.html">
 
 <dom-module id="shuttles-map"> 
   <style> 
@@ -24,7 +25,7 @@
       right: 5px;
       top: 5px;
     }
-    #mapCanvas {
+    .shuttle-map {
       width: 100%;
       height: 100%;
     }
@@ -34,17 +35,17 @@
     <iron-ajax
       id="fetchUpdates"
       url="/updates"
-      handle-as="json" auto
+      handle-as="json"
       on-response="placeMarkers">
     </iron-ajax>
     <iron-ajax
       id="fetchRoutes"
       url="/routes"
-      handle-as="json" auto
+      handle-as="json"
       on-response="drawRoutes">
     </iron-ajax>
 
-    <div id="mapCanvas"></div>
+    <google-map id="shuttleMap" class="shuttle-map" zoom="{{zoom}}" latitude="{{lat}}" longitude="{{lng}}"></google-map>
     <div id="logo">
       <img src="../images/logo.png" />
     </div>
@@ -68,16 +69,8 @@
           reflectToAttribute: true
         },
         zoom: {
-          type: String,
+          type: Number,
           reflectToAttribute: true
-        },
-        map: {
-          type: Object,
-          value: {}
-        },
-        options: {
-          type: Object,
-          value: {}
         },
         markers: {
           type: Array,
@@ -85,34 +78,27 @@
         }
       },
 
+      listeners: {
+        'google-map-ready': 'initializeTracking'
+      },
+
       toggleMenu: function() {
 
       },
 
-      attached: function() {
-        this.initializeMap(); 
-      },
-
-      initializeMap: function() {
-        // Set options and insert google map
-        this.options = {
-          center: {
-            lat: Number(this.lat), 
-            lng: Number(this.lng)
-          },
-          zoom: Number(this.zoom)
-        };
-        this.map = new google.maps.Map(this.$.mapCanvas, this.options);
+      initializeTracking: function() {
+        this.$.fetchRoutes.generateRequest();
+        this.$.fetchUpdates.generateRequest();
         this.periodicUpdates();
-      },
-
-      checkForUpdates: function(ajax) {
-        ajax.generateRequest();
       },
 
       periodicUpdates: function() {
         // periodically check screen setup for changes
         setInterval(this.checkForUpdates, 15000, this.$.fetchUpdates);
+      },
+
+      checkForUpdates: function(ajax) {
+        ajax.generateRequest();
       },
 
       placeMarkers: function(event, response) {
@@ -127,7 +113,7 @@
             // Place shuttle marker on map
             var marker = new google.maps.Marker({
               position: pos,
-              map: this.map,
+              map: this.$.shuttleMap.map,
               icon: "static/images/shuttle_icon.png",
               title: updates[i]["vehicleID"]
             });
@@ -147,6 +133,24 @@
 
       drawRoutes: function(event, response) {
         // Draw polylines on map to represent tracking routes
+        this.$.shuttleMap.clear();
+
+        for (var i = 0; i < response.response.length; i++) {
+          // Route details
+          var data = response.response[i];
+          var coords = JSON.parse(data['coords']);
+          var color = data['color'];
+          var width = data['width'];
+          // Add route to map
+          var route = new google.maps.Polyline({
+            path: coords,
+            geodesic: true,
+            strokeOpacity: 1.0,
+            strokeColor: color,
+            strokeWeight: width
+          });
+          route.setMap(this.$.shuttleMap.map);
+        }
       }
     });
   </script>
