Add stops admin form , stops create route, and stops index route

--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -93,8 +93,9 @@
       },
 
       periodicUpdates: function() {
-        // periodically check screen setup for changes
+        // periodically check for vehicle & route updates
         setInterval(this.checkForUpdates, 15000, this.$.fetchUpdates);
+        setInterval(this.checkForUpdates, 15000, this.$.routeUpdates);
       },
 
       checkForUpdates: function(ajax) {
