--- a/static/components/tracking-routes.html
+++ b/static/components/tracking-routes.html
@@ -18,13 +18,13 @@
       height: 500px;
     }
     .routes-container {
-      background: white;
+      background: #ffffff;
       margin: 25px;
       padding: 10px;
     }
     .submit-route {
       background: #3f51b5;
-      color: white;
+      color: #ffffff;
     }
   </style>
 
@@ -93,14 +93,6 @@
         zoom: {
           type: Number,
           reflectToAttribute: true
-        },
-        map: {
-          type: Object,
-          value: {}
-        },
-        options: {
-          type: Object,
-          value: {}
         },
         routeCoords: {
           type: Array,
