--- a/static/components/tracking-routes.html
+++ b/static/components/tracking-routes.html
@@ -45,9 +45,9 @@
             <b> Name: </b> <span>{{route.name}}</span>
             <b> StartTime: </b> <span>{{route.startTime}}</span>
             <b> EndTime: </b> <span>{{route.endTime}}</span>
-            <b> Enabled: </b> <span>{{route.Enabled}}</span>
+            <b> Enabled: </b> <span>{{route.enabled}}</span>
             <b> Color: </b> <span>{{route.color}}</span>
-            <b> Width: </b> <span>{{route.Width}}</span>
+            <b> Width: </b> <span>{{route.width}}</span>
             <br />
           </template>
         </paper-material>
