--- a/static/components/tracking-stops.html
+++ b/static/components/tracking-stops.html
@@ -1,7 +1,10 @@
 <link rel="import" href="../../bower_components/iron-form/iron-form.html">
+<link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../../bower_components/google-map/google-map.html">
 
 <dom-module id="tracking-stops">
@@ -34,6 +37,12 @@
       handle-as="json"
       last-response="{{stops}}">
     </iron-ajax>
+    <iron-ajax 
+      auto 
+      id="fetchRoutes"
+      url="/routes"
+      handle-as="json"
+      last-response="{{routes}}">
 
     <template is="dom-if" if="{{stops}}">
       <paper-material class="stops-list">
@@ -47,6 +56,7 @@
           <b> Latitude: </b> <span>{{stop.lat}}</span>
           <b> Longitude: </b> <span>{{stop.lng}}</span>
           <b> Enabled: </b> <span>{{stop.enabled}}</span>
+          <b> RouteID: </b> <span>{{stop.routeID}}</span>
           <br />
         </template>
       </paper-material>
@@ -57,6 +67,13 @@
       <google-map id="stopMap" class="stop-map" click-events="true" zoom="{{zoom}}" latitude="{{lat}}" longitude="{{lng}}"></google-map>
       <br />
       <form class="new-stop" is="iron-form" id="stopForm" content-type="application/json" method="post" action="/stops/create"> 
+        <paper-dropdown-menu label="Route" selected-item="{{selectedRoute}}">
+          <paper-menu class="dropdown-content">
+            <template is="dom-repeat" items="{{routes}}" as="route">
+              <paper-item value="{{route.id}}">{{route.name}}</paper-item>
+            </template>
+          </paper-menu>
+        </paper-dropdown-menu>
         <paper-input name="name" label="Stop Name"></paper-input>
         <paper-input name="description" label="Description"></paper-input>
         <paper-input name="address" label="Address"></paper-input>
@@ -71,6 +88,7 @@
         <br />
         <input type="hidden" name="lat" id="stopLat">
         <input type="hidden" name="lng" id="stopLng">
+        <input type="hidden" name="routeId" value="{{selectedRoute.value}}">
         <paper-button class="submit-stop" raisedButton onclick="submitStop()">Submit</paper-button>
       </form>
     </paper-material>
